# my_virtualgirlfriend

./: .gitignore  ARCHITECTURE.md  FINAL_MCP_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_PIPELINE_IMPLEMENTATION.md  MCP_ARCHITECTURE.md  MCP_FIX_SUMMARY.md  MCP_IMPLEMENTATION.md  PROJECT_COMPLETION_REPORT.md  README.md  README_DATASET.md  README_QUALITY_CHECK.md  README_VARIATION_ENGINE.md  REFACTORING_COMPLETE.md  TASK_DELIVERABLES.md  TASK_SUMMARY.md  cross_dedup_check.py  demo_inference_pipeline.py  enhance_config.yaml  fine_tuning.py  generate_girlfriend_dataset.py  generator.py  lora.py  main.py  pyproject.toml  requirements.txt  start_web.sh  test_acceptance.sh  test_acceptance_criteria.py  test_run.py  test_variation_engine.py  verify_implementation.py
docs/: ARCHITECTURE.md  CROSS_DEDUP_REPORT.md  DEDUP_TASK_SUMMARY.md  GENERATION_SUMMARY.md  INFERENCE_PIPELINE_README.md  QC_PIPELINE_SUMMARY.md  REFACTORING_SUMMARY.md  REFACTORING_V3.md  VARIATION_ENGINE_ACCEPTANCE.md  cross_dedup_report_20251123_082117.json  dataset_generation_summary.txt
models/: README.md  config.json  generation_config.json
scripts/: README.md  clear_memory.py  cross_dedup_check.py  example_variation_usage.py  fine_tune.py  generate_dataset.py  lora_train.py  mcp_demo.py  train.py
src/: config.py  scenarios.py  variation_engine.py
tests/: test_acceptance_criteria.py  test_enhance_modules.py  test_inference_pipeline.py  test_mcp_client.py  test_mcp_config.py  test_run.py  test_variation_engine.py  test_web_app.py
train_data/: atri.md  mono.md  training_data.json
(+49 files in other folders)
