[project]
name = "my-virtualgirlfriend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "evaluate>=0.4.6",
    "pip>=25.3",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "peft>=0.4.0",
    "scikit-learn>=1.3.0",
    "huggingface-hub>=0.34.0,<1.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "pytest>=7.0.0",
    "requests>=2.31.0",
]
